feat: Introduce a Python API server managed by supervisord, with Nginx configured to proxy API requests to it.

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,21 +15,25 @@ http {
         root   /usr/share/nginx/html;
         index  index.html;
 
+        # Proxy all API requests to the Python stats server
+        location /api/ {
+            proxy_pass http://127.0.0.1:8001;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            
+            # Disable caching for API
+            add_header Cache-Control "no-store, no-cache, must-revalidate";
+            
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' '*';
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS';
+        }
+
+        # Static files
         location / {
             try_files $uri $uri/ /index.html;
         }
-
-        # Proxy for Google Santa Tracker API
-        # To avoid CORS issues in browser
-        location /api/santa/ {
-            # Rewrite /api/santa/foo -> /foo
-            rewrite ^/api/santa/(.*) /$1 break;
-            
-            proxy_pass https://santa-api.appspot.com;
-            proxy_ssl_server_name on; # Required for SNI to appspot
-            
-            # CORS Headers (optional if we proxy everything, but good for safety)
-            add_header 'Access-Control-Allow-Origin' '*';
-        }
     }
 }
+
